--- a/lib/src/components/fo_data_table_component/fo_data_table_component.css
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.css
@@ -4,51 +4,13 @@
     width: 50%;
     margin: 0;
     display: inline-block;
-    font-size: 1rem;
-    color: #666; }
+    font-size: 1rem; }
   :host h3#table-actions {
     width: 50%;
     display: inline-block; }
   :host glyph {
     vertical-align: text-top; }
 
-/*
-div#search
-{
-  position: relative;
-  display: inline-block;
-  float: right;
-
-  input[type=text]
-  {
-    box-sizing: border-box;
-    width: 100%;
-    min-width: 8rem;
-    margin-bottom: 0.5rem;
-    padding: 0.2rem;
-    border: 2px solid #ccc;
-    border-right: 1.7rem solid #ccc;
-    border-radius: 0.3rem;
-    color: $color-text;
-  }
-
-  div.search-icon-container
-  {
-    position: absolute;
-    top: 0.1rem;
-    right: -0.1rem;
-    color: #aaa;
-    glyph
-    {
-      -webkit-transform: translate(-0.35rem, -0.1rem);
-      -moz-transform: translate(-0.35rem, -0.1rem);
-      -ms-transform: translate(-0.35rem, -0.1rem);
-      -o-transform: translate(-0.35rem, -0.1rem);
-      transform: translate(-0.35rem, -0.1rem);
-    }
-  }
-}
-*/
 fieldset {
   border: 0;
   padding: 0;
@@ -92,7 +54,6 @@ table.output {
       overflow: hidden;
       text-overflow: ellipsis; }
     table.output tbody tr td.empty-info h4 {
-      color: #cc9999;
       margin: 0.4rem;
       padding: 0.2rem;
       line-height: 100%;
