--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.html
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.html
@@ -9,7 +9,7 @@
             <glyph [icon]="locked ? 'lock' : 'lock_open'" size="large"></glyph>
         </p>
     </div>
-    <div class="container">
+    <div class="container box-shadow">
         <div class="header" [style.background-color]="backgroundColor">
             <p>{{title | phrase}}</p>
         </div>
