--- a/lib/src/components/fo_file_upload_component/fo_file_upload_component.scss
+++ b/lib/src/components/fo_file_upload_component/fo_file_upload_component.scss
@@ -1,10 +1,10 @@
-@import '../../style/constants';
+//@import '../../style/grid1/theme';
 
 :host
 {
   div.container
   {
-    border: 1px dashed $color-grey;
+    border: 1px dashed #ccc;
     padding: 0.5rem;
     text-align: center;
 
@@ -15,12 +15,6 @@
     p
     {
       margin: 0.5rem 0;
-    }
-
-    glyph.cancel-button
-    {
-      cursor: pointer;
-      color: $color-red;
     }
   }
 }
