--- a/lib/src/components/fo_image_file_component/fo_image_file_component.css
+++ b/lib/src/components/fo_image_file_component/fo_image_file_component.css
@@ -7,21 +7,16 @@ div.container {
     div.container div.image img {
       width: 100%;
       height: auto;
-      margin: 0 auto;
-      -webkit-box-shadow: 1px 1px 4px #666;
-      -moz-box-shadow: 1px 1px 4px #666;
-      box-shadow: 1px 1px 4px #666; }
+      margin: 0 auto; }
     div.container div.image material-button.delete {
       position: absolute;
       top: 0.25em;
       right: 0.25em;
-      color: white;
-      background-color: #8b0000; }
+      color: white; }
   div.container input[type=file] {
     display: none !important; }
   div.container p.error-output {
     color: white;
-    background-color: #cc9999;
     padding: 0.5rem;
     margin: 0.5rem 0 0 0; }
 
