--- a/lib/src/components/fo_image_file_component/fo_image_file_component.scss
+++ b/lib/src/components/fo_image_file_component/fo_image_file_component.scss
@@ -1,8 +1,8 @@
-@import '../../style/_constants.scss';
+//@import '../../style/grid1/theme';
 
 div.container
 {
-  border: 1px dashed $color-grey;
+  border: 1px dashed #ccc;
   padding: 0.5rem;
   text-align: center;
 
@@ -14,8 +14,6 @@ div.container
       width: 100%;
       height: auto;
       margin: 0 auto;
-
-      @include box-shadow();
     }
 
     material-button.delete
@@ -24,7 +22,6 @@ div.container
       top: 0.25em;
       right: 0.25em;
       color: white;
-      background-color: $color-red;
     }
   }
 
@@ -36,7 +33,6 @@ div.container
   p.error-output
   {
     color: white;
-    background-color: $color-alert-bright;
     padding: 0.5rem;
     margin: 0.5rem 0 0 0;
   }
