--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -1,4 +1,4 @@
-@import "../../../style/constants";
+//@import '../../style/grid1/theme';
 
 $width: 200px;
 
@@ -24,7 +24,7 @@ $width: 200px;
       width: 2rem;
       padding: 0.3rem;
       background-color: white;
-      border: 1px solid $color-grey;
+      border: 1px solid #ccc;
       border-radius: 0.2rem;
       cursor: pointer;
       text-align: center;
@@ -51,7 +51,6 @@ $width: 200px;
       overflow-y: auto;
       background-color: white;
       padding: 0;
-      @include box-shadow();
       width: 100%;
       height: 100%;
 
@@ -79,7 +78,7 @@ $width: 200px;
       {
         glyph
         {
-          color: $color-grey-dark;
+          color: #888;
         }
 
       }
