--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -1,4 +1,4 @@
-<label (click)="visible = true">
+<label (click)="visible = true" *ngIf="label.isNotEmpty">
     {{label | phrase}}
     <glyph  *ngIf="tooltip != null"
             [materialTooltip]="tooltip"
