--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.css
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.css
@@ -1,3 +1,162 @@
+/* TODO: update these variables with the of your app colors and font */
+.border-radius {
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  border-radius: 0.5rem; }
+
+.box-shadow {
+  -webkit-box-shadow: 1px 1px 3px #ccc;
+  -moz-box-shadow: 1px 1px 3px #ccc;
+  box-shadow: 1px 1px 3px #ccc; }
+
+.background-color-1 {
+  background-color: #1b9aaa !important; }
+
+.background-color-2 {
+  background-color: #f5f5f5 !important; }
+
+.background-color-3 {
+  background-color: #ccc !important; }
+
+.background-color-1-x-dark {
+  background-color: black !important; }
+
+.background-color-2-x-dark {
+  background-color: #8f8f8f !important; }
+
+.background-color-3-x-dark {
+  background-color: #666666 !important; }
+
+.background-color-1-dark {
+  background-color: #0d4a52 !important; }
+
+.background-color-2-dark {
+  background-color: #c2c2c2 !important; }
+
+.background-color-3-dark {
+  background-color: #999999 !important; }
+
+.background-color-1-bright {
+  background-color: #49d1e2 !important; }
+
+.background-color-2-bright {
+  background-color: white !important; }
+
+.background-color-3-bright {
+  background-color: white !important; }
+
+.background-color-1-x-bright {
+  background-color: #a1e7f0 !important; }
+
+.background-color-2-x-bright {
+  background-color: white !important; }
+
+.background-color-3-x-bright {
+  background-color: white !important; }
+
+.background-color-alert {
+  background-color: palevioletred !important; }
+
+.background-color-alert-bright {
+  background-color: #f0c1d1 !important; }
+
+.background-color-black {
+  background-color: #555 !important; }
+
+.background-color-white {
+  background-color: #fff !important; }
+
+.color-1 {
+  color: #1b9aaa !important; }
+
+.color-2 {
+  color: #f5f5f5 !important; }
+
+.color-3 {
+  color: #ccc !important; }
+
+.color-1-x-dark {
+  color: black !important; }
+
+.color-2-x-dark {
+  color: #8f8f8f !important; }
+
+.color-3-x-dark {
+  color: #666666 !important; }
+
+.color-1-dark {
+  color: #0d4a52 !important; }
+
+.color-2-dark {
+  color: #c2c2c2 !important; }
+
+.color-3-dark {
+  color: #999999 !important; }
+
+.color-1-bright {
+  color: #49d1e2 !important; }
+
+.color-2-bright {
+  color: white !important; }
+
+.color-3-bright {
+  color: white !important; }
+
+.color-1-x-bright {
+  color: #a1e7f0 !important; }
+
+.color-2-x-bright {
+  color: white !important; }
+
+.color-3-x-bright {
+  color: white !important; }
+
+.color-alert {
+  color: palevioletred !important; }
+
+.color-alert-bright {
+  color: #f0c1d1 !important; }
+
+.color-black {
+  color: #555 !important; }
+
+.color-white {
+  color: #fff !important; }
+
+html {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+
+hr {
+  border: 1px solid #f5f5f5; }
+
+material-checkbox div.icon-container glyph.icon.filled {
+  color: #1b9aaa; }
+
+material-tab-strip div.navi-bar div.tab-indicator {
+  background-color: #1b9aaa; }
+material-tab-strip tab-button.active {
+  color: #1b9aaa !important; }
+
+material-input span.label-text.focused {
+  color: #1b9aaa !important; }
+material-input span.label-text.invalid {
+  color: palevioletred !important; }
+material-input div.focused-underline {
+  background-color: #1b9aaa !important; }
+material-input div.focused-underline.invalid {
+  background-color: palevioletred !important; }
+material-input div.unfocused-underline.invalid {
+  background-color: palevioletred !important; }
+material-input div.error-text {
+  color: palevioletred !important; }
+
+material-spinner {
+  border-color: #1b9aaa !important; }
+
+material-tab div.tab-content:first-child {
+  display: block;
+  width: 100%; }
+
 :host /deep/ {
   /*
   div.transformer.closed
@@ -9,6 +168,7 @@
     transform: translateX(-$width);
   }*/ }
   :host /deep/ div.transformer {
+    text-align: left;
     position: fixed;
     z-index: 98;
     top: 0;
@@ -20,20 +180,22 @@
     transition: transform 100ms ease; }
     :host /deep/ div.transformer div.button {
       position: absolute;
-      right: -1.6rem;
+      right: -1.5rem;
       width: 2rem;
-      padding: 0.3rem;
+      padding: 0;
       background-color: white;
       border: 1px solid #ccc;
       border-radius: 0.2rem;
       cursor: pointer;
-      text-align: center; }
+      text-align: right; }
       :host /deep/ div.transformer div.button glyph {
         vertical-align: middle; }
     :host /deep/ div.transformer div.button.toggle-open {
       top: 5.3rem; }
     :host /deep/ div.transformer div.button.toggle-locked {
-      top: 9.7rem; }
+      top: 9.2rem; }
+      :host /deep/ div.transformer div.button.toggle-locked glyph {
+        margin-right: 0.2rem; }
     :host /deep/ div.transformer div.container {
       position: absolute;
       overflow-x: hidden;
