--- a/lib/src/components/fo_time_picker_component/fo_time_picker_component.css
+++ b/lib/src/components/fo_time_picker_component/fo_time_picker_component.css
@@ -1,3 +1,4 @@
+/* TODO: update these variables with the of your app colors and font */
 p.label {
   text-align: center;
   margin: 0;
@@ -24,6 +25,7 @@ div#canvas {
   height: 6rem;
   border-radius: 0.5rem; }
   div#canvas div.dial, div#canvas div.number {
+    color: #1b9aaa;
     position: absolute; }
   div#canvas div.number {
     -webkit-transform: translate(-50%, -50%);
@@ -36,11 +38,15 @@ div#canvas {
     border-radius: 0.2rem;
     cursor: pointer;
     padding: 0.1rem 0.125rem; }
+  div#canvas div.number:hover {
+    background-color: #f5f5f5;
+    color: #ccc; }
   div#canvas div.hour {
     font-size: 0.8rem; }
   div#canvas div.minute {
     font-size: 0.8rem; }
   div#canvas h1.output {
+    color: #f5f5f5;
     cursor: pointer;
     font-size: 1.5rem;
     text-align: center;
@@ -52,6 +58,12 @@ div#canvas {
     font-size: 0.7rem;
     padding: 0.3rem 0.4rem;
     border-radius: 0.2rem; }
+  div#canvas div.midnight-toggle:hover {
+    background-color: #f5f5f5;
+    color: #fff; }
+  div#canvas div.midnight-toggle.active {
+    background-color: #1b9aaa;
+    color: #fff; }
   div#canvas div#am {
     left: 1rem; }
   div#canvas div#pm {
