--- a/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
+++ b/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
@@ -1,4 +1,4 @@
-//@import '../../style/grid1/colors';
+@import '../../../style/grid1/colors';
 
 p.label
 {
@@ -31,7 +31,7 @@ div#canvas
 
   div.dial, div.number
   {
-    //color: $color1;
+    color: $color1;
     position: absolute;
   }
 
@@ -50,8 +50,8 @@ div#canvas
   }
   div.number:hover
   {
-    //background-color: $color2;
-    //color: $color3;
+    background-color: $color2;
+    color: $color3;
   }
 
   div.hour
@@ -66,7 +66,7 @@ div#canvas
 
   h1.output
   {
-    //color: $color2;
+    color: $color2;
     cursor: pointer;
     font-size: 1.5rem;
     text-align: center;
@@ -84,13 +84,13 @@ div#canvas
   }
   div.midnight-toggle:hover
   {
-    //background-color: $color2;
-    //color: $colorWhite;
+    background-color: $color2;
+    color: $colorWhite;
   }
   div.midnight-toggle.active
   {
-    //background-color: $color1;
-    //color: $colorWhite;
+    background-color: $color1;
+    color: $colorWhite;
   }
 
   div#am
