--- a/lib/style/grid1/grid.scss
+++ b/lib/style/grid1/grid.scss
@@ -266,8 +266,11 @@ div.row.expand
   max-width: 100%;
 }
 
-
 .clickable { cursor: pointer; }
+
+.display-block { display: block !important; }
+display-inline { display: inline !important; }
+display-inline-block { display: inline-block !important; }
 
 .hidden { display: none; }
 
@@ -327,6 +330,7 @@ div.row.expand
 .text-right { text-align: right; }
 .text-small { font-size: 0.9em; }
 
-.vertical-align-baseline { vertical-align: baseline; }
-.vertical-align-text-top { vertical-align: text-top; }
-.vertical-align-text-bottom { vertical-align: text-bottom; }
+.vertical-align-baseline { vertical-align: baseline !important; }
+.vertial-align-middle { vertical-align: middle !important; }
+.vertical-align-text-top { vertical-align: text-top !important; }
+.vertical-align-text-bottom { vertical-align: text-bottom !important; }
