--- a/lib/src/components/fo_time_picker_component/fo_time_picker_component.css
+++ b/lib/src/components/fo_time_picker_component/fo_time_picker_component.css
@@ -1,72 +1,2 @@
-/* TODO: update these variables with the of your app colors and font */
-p.label {
-  text-align: center;
-  margin: 0;
-  font-size: 0.9em;
-  position: absolute;
-  left: 0;
-  right: 0; }
-
-div#canvas {
-  margin: 0 auto;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  position: relative;
-  width: 6rem;
-  height: 6rem;
-  border-radius: 0.5rem; }
-  div#canvas div.dial, div#canvas div.number {
-    color: #1b9aaa;
-    position: absolute; }
-  div#canvas div.number {
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-    display: inline;
-    border-radius: 0.2rem;
-    cursor: pointer;
-    padding: 0.1rem 0.125rem; }
-  div#canvas div.number:hover {
-    background-color: #f5f5f5;
-    color: #ccc; }
-  div#canvas div.hour {
-    font-size: 0.8rem; }
-  div#canvas div.minute {
-    font-size: 0.8rem; }
-  div#canvas h1.output {
-    color: #f5f5f5;
-    cursor: pointer;
-    font-size: 1.5rem;
-    text-align: center;
-    width: 100%; }
-  div#canvas div.midnight-toggle {
-    position: absolute;
-    bottom: 0.2rem;
-    cursor: pointer;
-    font-size: 0.7rem;
-    padding: 0.3rem 0.4rem;
-    border-radius: 0.2rem; }
-  div#canvas div.midnight-toggle:hover {
-    background-color: #f5f5f5;
-    color: #fff; }
-  div#canvas div.midnight-toggle.active {
-    background-color: #1b9aaa;
-    color: #fff; }
-  div#canvas div#am {
-    left: 1rem; }
-  div#canvas div#pm {
-    right: 1rem; }
-
+p.label{text-align:center;margin:0;font-size:0.9em;position:absolute;left:0;right:0}div#canvas{margin:0 auto;display:-ms-flexbox;display:-webkit-flex;display:flex;-ms-flex-align:center;-webkit-align-items:center;-webkit-box-align:center;align-items:center;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;position:relative;width:6rem;height:6rem;border-radius:0.5rem}div#canvas div.dial,div#canvas div.number{color:#1b9aaa;position:absolute}div#canvas div.number{-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);-o-transform:translate(-50%, -50%);transform:translate(-50%, -50%);text-align:center;display:inline;border-radius:0.2rem;cursor:pointer;padding:0.1rem 0.125rem}div#canvas div.number:hover{background-color:#f5f5f5;color:#ccc}div#canvas div.hour{font-size:0.8rem}div#canvas div.minute{font-size:0.8rem}div#canvas h1.output{color:#f5f5f5;cursor:pointer;font-size:1.5rem;text-align:center;width:100%}div#canvas div.midnight-toggle{position:absolute;bottom:0.2rem;cursor:pointer;font-size:0.7rem;padding:0.3rem 0.4rem;border-radius:0.2rem}div#canvas div.midnight-toggle:hover{background-color:#f5f5f5;color:#fff}div#canvas div.midnight-toggle.active{background-color:#1b9aaa;color:#fff}div#canvas div#am{left:1rem}div#canvas div#pm{right:1rem}
 /*# sourceMappingURL=fo_time_picker_component.css.map */
