--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -14,7 +14,7 @@
                         icon
                         clear-size
                         (trigger)="close()">
-                    <glyph icon="close" size="medium"></glyph>
+                    <material-icon icon="close" size="medium"></material-icon>
                 </material-button>
             </h3>
         </div>
