--- a/lib/src/components/fo_modal_component/fo_modal_component.scss
+++ b/lib/src/components/fo_modal_component/fo_modal_component.scss
@@ -1,3 +1,6 @@
+@import '../../../../../../Visurus/Grid/v1/grid';
+@import '../../../../../../Visurus/Grid/v1/theme';
+
 material-dialog
 {
   min-width: 15rem;
