--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.css
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.css
@@ -1,6 +1,2 @@
-div.selected-values {
-  font-size: 0.9em;
-  color: #888;
-  margin: 0.2rem 0 0.912rem 0; }
-
+div.selected-values{font-size:0.9em;color:#888;margin:0.2rem 0 0.912rem 0}
 /*# sourceMappingURL=fo_multi_select_component.css.map */
