--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -1,11 +1,12 @@
-@import '../../../style/grid1/grid';
-@import '../../../style/grid1/theme';
+//@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '../../../../../../Visurus/Grid/v1/grid';
+@import '../../../../../../Visurus/Grid/v1/theme';
 
 :host
 {
   width:100%;
 
-  glyph
+  material-icon
   {
     vertical-align: text-top;
   }
@@ -61,7 +62,7 @@ table.output
         font-size: 0.8rem;
       }
     }
-    border-bottom: 3px solid #ddd;
+    border-bottom: 2px solid #ddd;
   }
 
   tbody
@@ -113,7 +114,7 @@ table.output
     margin-left: 0.5rem;
   }
 
-  glyph.disabled
+  material-icon.disabled
   {
     opacity: 0.3;
   }
