--- a/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
+++ b/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
@@ -1,12 +1,12 @@
 <label>{{label | phrase}}</label>
 <div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
     <input #input type="file" (change)="onFileChange($event)" accept="image/*,.pdf" />
-    <material-button raised (trigger)="input.click()"><glyph icon="folder_open"></glyph></material-button>
-    <material-button raised [disabled]="disabled || !valid" (trigger)="upload()"><glyph icon="file_upload"></glyph></material-button>
+    <material-button raised (trigger)="input.click()"><material-icon icon="folder_open"></material-icon></material-button>
+    <material-button raised [disabled]="disabled || !valid" (trigger)="upload()"><material-icon icon="file_upload"></material-icon></material-button>
     <p>
         <span *ngIf="file == null">...</span>
         <span *ngIf="file != null">{{file.name}} ({{(file.size / 1024).round()}}kb)</span>
-        <glyph *ngIf="file != null" icon="cancel" size="small" class="color-alert clickable" (click)="clearSelection()"></glyph>
+        <material-icon *ngIf="file != null" icon="cancel" size="small" class="color-alert clickable" (click)="clearSelection()"></material-icon>
     </p>
     <p class="alert" *ngIf="file != null && file.size > maxByteSize">
         {{'max_bytesize_exceeded' | phrase}} ({{(maxByteSize/1024).ceil()}}kb)
