--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -1,4 +1,5 @@
-@import '../../../style/grid1/theme';
+@import '../../../../../Grid/v1/theme';
+
 
 :host /deep/
 {
@@ -27,7 +28,7 @@
       cursor: pointer;
       text-align: right;
 
-      glyph
+      material-icon
       {
         vertical-align: middle;
       }
@@ -40,7 +41,7 @@
     div.button.toggle-locked
     {
       top: 9.2rem;
-      glyph
+      material-icon
       {
         margin-right: 0.2rem;
       }
@@ -69,7 +70,7 @@
           align-items: center;
           justify-content: center;
           vertical-align: middle;
-          glyph
+          material-icon
           {
             cursor: pointer;
           }
@@ -78,7 +79,7 @@
 
       div.content
       {
-        glyph
+        material-icon
         {
           color: #888;
         }
