--- a/lib/src/components/fo_image_file_component/fo_image_file_component.html
+++ b/lib/src/components/fo_image_file_component/fo_image_file_component.html
@@ -2,9 +2,23 @@
 <div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
     <div *ngIf="source != null && !source.isEmpty" class="image">
         <img class="box-shadow" [src]="source" alt="{{alt}}" />
-        <material-button class="delete" clear-size raised (trigger)="fileInput.value = null; clearSource()"><material-icon icon="delete" size="x-large"></material-icon></material-button>
+        <material-button
+                class="delete"
+                clear-size
+                raised
+                [disabled]="disabled"
+                (trigger)="fileInput.value = null; clearSource()">
+            <material-icon icon="delete" size="x-large"></material-icon>
+        </material-button>
     </div>
-    <material-button class="add" raised *ngIf="source == null || source.isEmpty" (trigger)="fileInput.click()"><material-icon icon="add_a_photo" size="x-large"></material-icon></material-button>
+    <material-button
+            class="add"
+            raised
+            *ngIf="source == null || source.isEmpty"
+            [disabled]="disabled"
+            (trigger)="fileInput.click()">
+        <material-icon icon="add_a_photo" size="x-large"></material-icon>
+    </material-button>
     <input type="file" #fileInput (change)="onFileChange($event)" accept="image/jpg,image/jpeg,image/png,image/gif" />
     <p *ngIf="invalidFile" class="error-output">{{'invalid_file' | phrase}}</p>
 </div>
